tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultiblockGoals-AAAAAAAAAAAAAAAAAAAADA==__OneFluidTanktoSt-tQecVBhjRRyfR3sqeNBrtA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1757324268192951220,
  "prerequisites": [
    213
  ],
  "properties": {
    "auto_claim": false,
    "desc": "If you ever thought that the standard super tanks or quantum tanks were still too small then the YOTTank is the next option.\n\nThe YOTTank compared to the TFFT might only be able to store one fluid instead of 25 fluids. However it makes up for this downside by not having to share any of the fluid storage space with any other fluids. It also does not require any energy input or maintenance requirements.\n\nIf all you want to do is store a large amount of one fluid type then look no further then the YOTTank. It has a special ME input hatch for ae2 connections while having expandable storage blocks. The tank can be both upgraded with the fluid storage blocks and can be increased in height to hold any more fluid.\n\nSo if you want to store your fluid in style then look no further then the YOTTank.\n\n[note]If you're having issues searching for the fluid storage blocks for the YOTTank in NEI then search for: fluid cell block[/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lOne Fluid Tank to Store it All!!",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    213
  ],
  "rewards": [],
  "tasks": []
}
