tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultiblockGoals-AAAAAAAAAAAAAAAAAAAADA==__PlayingWiththeBi-AAAAAAAAAAAAAAAAAAAJXQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2397,
  "optional_prerequisites": [
    16740244179246120339,
    943
  ],
  "prerequisites": [],
  "properties": {
    "auto_claim": false,
    "desc": "This facility will process certain chemical recipes you'll need later on, like Rocket Fuels. Keep in mind that recipes can only be made after meeting the required Chemical Plant tier.\n\nIt will need a minecart load of resources, so start mining!\n\nCatalysts are needed in some recipes, place them in the Catalyst Housing. They use durability, this includes ones that don't look like it.\n\n[note]You can make Silicon Carbide in the mixer, you don't need the ABS.[/note]\n\nValid solid casings: (Determines CP Tier for recipes)\n1 Strong Bronze Machine Casing\n2 Solid Steel Machine Casing\n3 Sturdy Aluminium Machine Casing\n4 Clean Stainless Steel Machine Casing\n5 Stable Titanium Machine Casing\n6 Robust Tungstensteel Casing\n7 Vigorous Laurenium Machine Casing\n8 Rugged Botmium Machine Casing\n\nValid machine casings: (Determines maximum hatch/bus tier)\nLV-UHV Machine Casing, UHV unlocks any hatch/bus.\n\nValid pipe casings: (+2 Parallels, -20% chance to consume catalyst durability per pipe casing starting with 2 parallels and 100% chance for the first one.)\nBronze\nSteel\nTitanium\nTungstensteel\n\nAll coils from Cupronickel to Eternal are valid. Each one increases speed by +50%, starting at 50% speed for Cupronickel.\n\n[note]Additionally: If you have at least Awakened Draconium Coils and Tungstensteel pipe casings, then no catalyst is consumed at all![/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Playing With the Big Boys, Chemically",
    "party_single_reward": false,
    "quest_logic": "OR",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "rewards": [],
  "tasks": []
}
