tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultiblockGoals-AAAAAAAAAAAAAAAAAAAADA==__PlayingwithColor-Z_jn8qzFQr6FWHzmt2i3Aw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 12449430131823916803,
  "prerequisites": [
    617,
    77
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Multiblock machines enforce input separation based on hatch color. Inputs from Input Buses and Input Hatches will only interact if they share the same color. Un-dyed inputs act as wildcards compatible with any color.\n\nColor can be applied using a Spray Can and removed with a Spray Can Solvent. An Infinite Spray Can becomes available later in progression.\n\n§6Now §2go §3have §4fun§5!!!",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lPlaying with Colors!",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "OR",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    617,
    77
  ],
  "rewards": [],
  "tasks": []
}
