tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultiblockGoals-AAAAAAAAAAAAAAAAAAAADA==__ProducingSolarPa-NVgXYF-TQvqYnLn1NLM6pw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 6886921897573038759,
  "prerequisites": [
    770
  ],
  "properties": {
    "auto_claim": false,
    "desc": "[quest]The Solar Factory![/quest]\n\nThe structure has tiers, each of which allow greater production than the previous tier. \n\nRecipes in NEI display the minimum wafer tier required. \nWafer Tiers: \n\n§6Monocrystalline\nPhosphorous\nNaquadah\nEuropium\nAmericium\nPhotonically Prepared\nPhotonically Enhanced§r\n\nMachine parallels are based on Precise Casing Tier:\n\n§6MK-I: §c8x§r\n§6MK-II: §c16x§r\n§6MK-III: §c32x§r\n§6MK-IV: §c64x§r\n\n§lTier §b2:§r\n\n§aSupports Multi-Amp energy hatches§r\n§c25%§r more outputs for every Wafer tier §oabove§r the minimum required.\nThe bonus to outputs occurs after parallels, but §9cannot be greater§r than §c100%§r\nLV-LuV Solar Panels can be made without the previous panel, but at a higher cost.\n\n§lTier §b3:§r\n\n§aSupports Laser Energy hatches§r\nBonus per increased wafer tier is increased to §c50%§r\nZPM-UV Solar Panels can be made without the previous panel, but at a higher cost.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Producing Solar Panels in BULK!!",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    770
  ],
  "rewards": [],
  "tasks": []
}
