tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultiblockGoals-AAAAAAAAAAAAAAAAAAAADA==__SievertfortheVat-AAAAAAAAAAAAAAAAAAAKAw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2563,
  "prerequisites": [
    2561,
    1243
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Some Vat recipes require a certain Sievert (radioactivity) value. So attach this Radio Hatch to your Vat to input radioactive material!\n\nThe Radio Hatch holds rods/long rods of radioactive material and uses them to produce Sievert. The input item determines the Sievert value and how long it lasts. Items stored in the hatch will be used continuously even if machine not active, so make sure you want to craft something before putting items in.\n\nYou can check the stats of an inputted item with a portable scanner. Higher tiers of hatch hold more, from 1kg (HV) to 6kg (UV). Rods are worth 1kg, while long rods are 2kg.\n\nSome recipes require [warn]exact[/warn] sievert, you can use the screwdriver to access the radiation shutter control to adjust how much sv is blocked from being sent to the vat. For example, you need 100sv to make Seaweed Broth, so you'd use Naquadah rods, and block off 30sv.\n\nRod Stats:\nMaterial-Sievert-Apprx. time until used up\nBismuth                 83sv   198s\nUranium 235           92sv    80s\nUranium 238           92sv    80s\nPlutonium 239         94sv    66s\nPlutonium 241         94sv    66s\nNaquadah             130sv   14.5s\nEnriched Naquadah 140sv   10.5s\nNaquadria            150sv     8s\n\nThere are more radioactive materials than these, but these are the main ones.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lSievert for the Vat",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2561,
    1243
  ],
  "rewards": [],
  "tasks": []
}
