tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultiblockGoals-AAAAAAAAAAAAAAAAAAAADA==__SomethingFromNot--1GoIXIXR029oc0Ge6sRGg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 8221118042900992282,
  "prerequisites": [
    2665,
    2617
  ],
  "properties": {
    "auto_claim": false,
    "desc": "This multiblock works just as a normal drilling rig, but with the power of §5§l§oTechnology §rit won't reduce the underground field size so the output will always be the same.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lSomething From Nothing pt 2",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2665,
    2617
  ],
  "rewards": [],
  "tasks": []
}
