tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultiblockGoals-AAAAAAAAAAAAAAAAAAAADA==__SomethingFromNot-AAAAAAAAAAAAAAAAAAAKbA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2668,
  "prerequisites": [
    2610,
    8293455332711077908,
    1213
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Void Miners are basically the same thing as regular ones, except that they draw from the whole pool of ores for the dimension without there having to be any nearby. In addition, you can speed them up by supplying Neon, Krypton, Xenon, or Oganesson.\n\nYou can get Neon reasonably easily from Bartimaeusnek Ore from Ross 128ba. Krypton and Xenon can be produced from centrifuging fuel rods. All three can be produced from the EV liquid air distillation method. Remember you need the Liquid Air Fluid Hatch to actually put in enough liquid air. If you want all the produced gasses from the first 4 slots, you'll need to use the Giant Output Hatch.\n\nTo get Oganesson, you'll need mk3 fusion.\n\nAll four fluids can be replicated, so you'll probably end up doing that.\n\n[note]If you want the Deep Dark's ores, you HAVE to use a Void Miner.[/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lSomething From Nothing",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2610,
    8293455332711077908,
    1213
  ],
  "rewards": [],
  "tasks": []
}
